# AGNO_AGENT

./: pyproject.toml
.streamlit/: config.toml
aula_3/: exemplo1.py  exemplo2.py
deploy/: exemplo1.py  exemplo2.py  exemplo3.py  exemplo4.py
tmp/chromadb/: chroma.sqlite3
